# Kalshi_MarketMaker

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
cmake/: Warnings.cmake
configs/: README.md
configs/phase7/: b2c_evidence_policy_v1.json  kalshi_wsh_tor_no_fill_cxx_oracle_v2.json  kalshi_wsh_tor_no_fill_product_terms_v3.json  kalshi_wsh_tor_no_fill_v1.json  kalshi_wsh_tor_v1.json
configs/product_catalog/: acquisition_spec.example.json  manifest.json
cpp/: CMakeLists.txt
cpp/include/pmm/: README.md
cpp/include/pmm/agents/: baseline_agents.hpp
cpp/include/pmm/book/: order_book.hpp
cpp/include/pmm/core/: core.hpp  execution.hpp  identifiers.hpp  inventory.hpp  market.hpp  order.hpp  primitives.hpp  result.hpp
cpp/include/pmm/market_maker/: market_maker.hpp
cpp/include/pmm/risk/: account_risk.hpp
cpp/include/pmm/sim/: exchange_simulator.hpp
cpp/src/: main.cpp
cpp/src/agents/: baseline_agents.cpp
cpp/src/book/: order_book.cpp
cpp/src/core/: execution.cpp  inventory.cpp  market.cpp  order.cpp  primitives.cpp
cpp/src/market_maker/: market_maker.cpp
cpp/src/risk/: account_risk.cpp  risk_oracle_main.cpp
cpp/src/sim/: durable_store.cpp  durable_store.hpp  exchange_simulator.cpp
data/: README.md
docs/: README.md
docs/00 Project Hub/: Current State and Remaining Work.md  Graphify Workflow.md  Project Hub.md
docs/01 Roadmap/: Phase 1 Plan.md  Phase 2 Core Domain Types.md  Phase 3 Limit Order Book.md  Phase 4 Exchange Simulator.md  Phase 5 Baseline Trading Agents.md  Phase 6 Baseline Market Making.md  Phase 7 Historical Replay and Backtesting.md
docs/02 Architecture/: ADR-001 Repository Foundation.md  ADR-002 Core Domain Model.md  ADR-003 Limit Order Book.md  ADR-004 Exchange Simulator and Replay.md  ADR-005 Deterministic Baseline Agents.md  ADR-006 Baseline Market Making and Risk Admission.md  ADR-007 Deterministic Historical Replay and Backtesting.md  ADR-008 Calibrated Execution Accounting and Research Evaluation.md  ADR-009 Canonical Risk Conformance and Research Oracle Migration.md  ADR-010 Authoritative Product Terms and Artifact Lineage.md  ADR-011 Bracketed Product Evidence and Review Responsibility.md  ADR-012 Deterministic Document Evidence and Completeness Profiles.md  ADR-013 Multi-Scope Capture and Reconnect-Aware Normalization.md
docs/03 Market Microstructure/: README.md
docs/04 Mathematical Models/: README.md
docs/05 Machine Learning/: README.md
docs/06 Experiments/: README.md
docs/07 Engineering Notes/: Authoritative Product Terms Critique.md  Authoritative Product Terms Explained.md  Canonical Risk Conformance Critique.md  Canonical Risk Conformance Explained.md  Phase 1 Foundation.md  Phase 2 Core Domain Types.md  Phase 2 Critique.md  Phase 2 Explained.md  Phase 3 Critique.md  Phase 3 Explained.md  Phase 3 Limit Order Book.md  Phase 4 Critique.md  Phase 4 Exchange Simulator.md  Phase 4 Explained.md  Phase 5 Baseline Trading Agents.md  Phase 5 Critique.md  Phase 5 Explained.md  Phase 6 Baseline Market Making.md  Phase 6 Critique.md  Phase 6 Explained.md  Phase 7 B2c-H Hardening Critique.md  Phase 7 B2c-H Hardening Design.md  Phase 7 B2c-H Hardening Explained.md  Phase 7 B2c-H Refusal Codes.md  Phase 7 B2c-P Approval Controls.md  Phase 7 Critique.md  Phase 7 Explained.md  Phase 7 Historical Replay and Backtesting.md  Phase 7 Multi-Market Replay Critique.md  Phase 7 Multi-Market Replay Explained.md  Phase 7 Multi-Market Replay and Backtesting.md  Phase 7 Multi-Scope Capture Critique.md  Phase 7 Multi-Scope Capture Explained.md  Phase 7 Multi-Scope Capture and Recovery.md  Phase 7 Retained Capture Evidence Critique.md  Phase 7 Retained Capture Evidence Explained.md  Phase 7 Retained Capture Evidence.md  Phase 7 Segment-Aware Features Critique.md  Phase 7 Segment-Aware Features Explained.md  Phase 7 Segment-Aware Features.md  (+5 more)
docs/08 Daily Logs/: README.md
docs/09 Interview Notes/: README.md
docs/10 References/: README.md
docs/Templates/: Experiment Template.md  Feature Note Template.md
experiments/: README.md
python/: README.md  kalshi_capture.py  pmm_b2c_operator.py  pmm_phase7.py  pmm_phase7_evidence.py  pmm_phase7_measurement.py  pmm_phase7_multimarket.py  pmm_product_terms.py
python/tests/: b2c_v2_fixture_builder.py  b2c_v2_strict_fixture_builder.py  risk_checkpoint_reference.py  risk_conformance_reference.py  synthetic_product_package_builder.py  test_kalshi_capture.py  test_phase7.py  test_phase7_b2c_evidence.py  test_phase7_b2c_measurement.py  test_phase7_b2c_operator.py  test_phase7_multimarket_backtest.py  test_product_terms.py  test_risk_checkpoint_conformance.py  test_risk_conformance.py  test_risk_fixture_integrity.py
schemas/historical/: b2c-candidate-snapshot-v1.schema.json  b2c-credential-scan-v1.schema.json  b2c-evidence-manifest-v1.schema.json  b2c-evidence-manifest-v2.schema.json  b2c-evidence-policy-v1.schema.json  b2c-evidence-policy-v2.schema.json  b2c-measurement-v1.schema.json  b2c-measurement-v2.schema.json  b2c-normalization-telemetry-v1.schema.json  b2c-repetition-inventory-v1.schema.json  b2c-risk-telemetry-v1.schema.json  b2c-run-approval-v1.schema.json  backtest-artifact-v1.schema.json  backtest-result-manifest-v4.schema.json  backtest-v4.schema.json  capture-config-v2.schema.json  feature-manifest-v3.schema.json  feature-row-v2.schema.json  product-map-v3.schema.json  (+6 more)
scripts/: README.md  build.sh  check_format.sh  configure.sh  format.sh  test.sh
tests/: CMakeLists.txt  account_risk_test.cpp  baseline_agents_test.cpp  core_domain_test.cpp  exchange_simulator_test.cpp  market_maker_test.cpp  order_book_test.cpp  risk_checkpoint_conformance_test.cpp  risk_checkpoint_fixture.cpp  risk_checkpoint_fixture.hpp  risk_conformance_common.cpp  risk_conformance_common.hpp  risk_conformance_executor.cpp  risk_conformance_executor.hpp  risk_conformance_fixture.cpp  risk_conformance_fixture.hpp  risk_conformance_fixture_test.cpp  smoke_test.cpp
tools/: README.md  risk_fixture_integrity.py
(+128 files in other folders)
