[project]
name = "pm-marketmaker"
version = "0.1.0"
description = "Research platform for deterministic prediction-market market making"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42,<47",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "websockets>=14,<16",
]
