include(${PROJECT_SOURCE_DIR}/cmake/Warnings.cmake)

add_executable(pmm_smoke_test smoke_test.cpp)
target_compile_features(pmm_smoke_test PRIVATE cxx_std_20)
target_link_libraries(pmm_smoke_test PRIVATE GTest::gtest_main pmm_core)
pmm_enable_warnings(pmm_smoke_test)

add_executable(pmm_core_test core_domain_test.cpp)
target_compile_features(pmm_core_test PRIVATE cxx_std_20)
target_link_libraries(pmm_core_test PRIVATE GTest::gtest_main pmm_core)
pmm_enable_warnings(pmm_core_test)

add_executable(pmm_order_book_test order_book_test.cpp)
target_compile_features(pmm_order_book_test PRIVATE cxx_std_20)
target_link_libraries(pmm_order_book_test PRIVATE GTest::gtest_main pmm_book)
pmm_enable_warnings(pmm_order_book_test)

add_executable(pmm_exchange_simulator_test exchange_simulator_test.cpp)
target_compile_features(pmm_exchange_simulator_test PRIVATE cxx_std_20)
target_link_libraries(pmm_exchange_simulator_test PRIVATE GTest::gtest_main pmm_sim)
pmm_enable_warnings(pmm_exchange_simulator_test)

add_executable(pmm_baseline_agents_test baseline_agents_test.cpp)
target_compile_features(pmm_baseline_agents_test PRIVATE cxx_std_20)
target_link_libraries(pmm_baseline_agents_test PRIVATE GTest::gtest_main pmm_agents)
pmm_enable_warnings(pmm_baseline_agents_test)

add_executable(pmm_account_risk_test account_risk_test.cpp)
target_compile_features(pmm_account_risk_test PRIVATE cxx_std_20)
target_link_libraries(pmm_account_risk_test PRIVATE GTest::gtest_main pmm_risk)
pmm_enable_warnings(pmm_account_risk_test)

add_executable(
  pmm_risk_conformance_fixture_test
  risk_conformance_fixture.cpp
  risk_conformance_fixture_test.cpp)
target_compile_features(pmm_risk_conformance_fixture_test PRIVATE cxx_std_20)
target_compile_definitions(
  pmm_risk_conformance_fixture_test
  PRIVATE PMM_SOURCE_DIR="${PROJECT_SOURCE_DIR}")
target_link_libraries(
  pmm_risk_conformance_fixture_test
  PRIVATE GTest::gtest_main nlohmann_json::nlohmann_json pmm_risk)
pmm_enable_warnings(pmm_risk_conformance_fixture_test)

add_executable(pmm_market_maker_test market_maker_test.cpp)
target_compile_features(pmm_market_maker_test PRIVATE cxx_std_20)
target_link_libraries(pmm_market_maker_test PRIVATE GTest::gtest_main pmm_market_maker)
pmm_enable_warnings(pmm_market_maker_test)

include(GoogleTest)
gtest_discover_tests(pmm_smoke_test)
gtest_discover_tests(pmm_core_test)
gtest_discover_tests(pmm_order_book_test)
gtest_discover_tests(pmm_exchange_simulator_test)
gtest_discover_tests(pmm_baseline_agents_test)
gtest_discover_tests(pmm_account_risk_test)
gtest_discover_tests(pmm_risk_conformance_fixture_test)
gtest_discover_tests(pmm_market_maker_test)

add_test(NAME PmmDemo.RunsScenario COMMAND $<TARGET_FILE:pmm_demo> --steps 2)
set_tests_properties(PmmDemo.RunsScenario PROPERTIES PASS_REGULAR_EXPRESSION "fill: 1 at 48")
